# Yieldera

./: .gitmodules  README.md
backend/: .env.exemple  Cargo.toml
backend/src/: config.rs  main.rs  state.rs  types.rs
backend/src/abi/: YielderaVault.json
backend/src/api/: mod.rs
backend/src/config/: mainnet.toml  mod.rs  testnet.toml
backend/src/core/: coingecko.rs  init.rs  mod.rs  vault.rs  vault_spawn.rs
backend/src/helpers/: mod.rs  position.rs  vault.rs
backend/src/helpers/math/: mod.rs
backend/src/strategies/: ai.rs  basic.rs
contracts/: .env.exemple  foundry.toml
contracts/script/: DeployYielderaVault.s.sol
contracts/src/: YielderaVault.sol
contracts/src/interfaces/: INonfungiblePositionManager.sol  IUniswapV3Pool.sol  IWhbarHelper.sol
contracts/src/libraries/: HbarConversion.sol  TransferHelper.sol
frontend/: package-lock.json  package.json
frontend/docs/: ENVIRONMENT.md
frontend/src/: App.tsx  AppRouter.tsx
frontend/src/components/: Features.tsx  Navbar.tsx  ProblemSolutionSection.tsx  WalletSelectionDialog.tsx
frontend/src/components/ui/: ToastProvider.tsx
frontend/src/config/: constants.ts  env.ts
frontend/src/hooks/: useVaultDeposit.ts  useVaultWithdraw.ts
frontend/src/pages/: App.tsx  Deposit.tsx  Withdraw.tsx
frontend/src/styles/: toast.css
frontend/src/types/: api.ts
frontend/src/utils/: vaultTransform.ts
mcp/: Cargo.toml
mcp/src/: main.rs
mcp/src/tools/: balance.rs  calculator.rs  mod.rs
src/: config.rs  main.rs  types.rs
src/abi/: YielderaVault.json
src/helpers/: mod.rs  vault.rs
(+1 files in other folders)
