[package]
name = "yieldera"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.23", features = ["full"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
